# qwtble

./: CMakeLists.txt  CMakeLists.txt.qwt  QwtConfig.cmake  README.md  qwt.patch  qwt_install.cmake  qwt_preconfigure.cmake  qwt_setup.cmake  sonar-project.properties
.github/workflows/: buld-and-test.yml  codeql.yml  static-analysis-and-coverage.yml
examples/: CMakeLists.txt  example.cpp
include/qwtble/: BasicDataPlot.h  GroupPlot.h  GroupPlotUI.h  HistogramPlot.h  HistogramPlotUI.h  NotchedMarker.h  PlotBase.h  Quantiles.h  QuantilesPlot.h  QwtBleUtilities.h
src/: BasicDataPlot.cpp  BasicDataPlot.h  CustomMarker.cpp  GroupPlot.cpp  GroupPlot.h  GroupPlotUI.cpp  GroupPlotUI.h  GroupPlotUI.ui  HistogramPlot.cpp  HistogramPlot.h  HistogramPlotUI.cpp  HistogramPlotUI.h  LinearPicker.cpp  NotchedMarker.cpp  NotchedMarker.h  Picker.cpp  Picker.h  PlotBase.cpp  PlotBase.h  PlotData.h  PlotMagnifier.cpp  PlotMagnifier.h  Quantiles.cpp  Quantiles.h  QuantilesPlot.cpp  QuantilesPlot.h  QwtBleUtilities.cpp  QwtBleUtilities.h  ScrollArea.cpp  ScrollArea.h  StringsScaleDraw.cpp  StringsScaleDraw.h  Utilities.cpp  Utilities.h  XDateYAxisNumberPicker.cpp  XDateYAxisNumberPicker.h  XYAxisNumberPicker.cpp  XYAxisNumberPicker.h  YAxisNumberPicker.cpp  YAxisNumberPicker.h  (+2 more)
test/: CMakeLists.txt  GroupPlotUITest.cpp  QuantilesTest.cpp  UtilitiesTest.cpp  UtilitiesTest.h
tests/: BasicDataPlotTest.cpp  BasicDataPlotTest.h  CMakeLists.txt  CheckTest.cpp  CheckTest.h  Common.cpp  Common.h  GroupPlotTest.cpp  GroupPlotTest.h  GroupPlotUITest.cpp  GroupPlotUITest.h  HistogramPlotTest.cpp  HistogramPlotTest.h  QuantilesPlotTest.cpp  QuantilesPlotTest.h  QuantilesTest.cpp  QuantilesTest.h  Tests.cpp  UtilitiesTest.cpp  UtilitiesTest.h  testResources.qrc
